# ocelot

./: CMakeLists.txt  Dockerfile
src/: db.cpp  db.h  ocelot.cpp  worker.cpp  worker.h
